--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,28 @@
 repos:
+  # Black для форматування коду
   - repo: https://github.com/psf/black
-    rev: 23.9.1
+    rev: 23.9.1  # Версія Black, можна обрати останню стабільну
     hooks:
       - id: black
+        args: [--line-length=100]  # Налаштування довжини рядка
+
+  # Flake8 для перевірки стилю коду
   - repo: https://github.com/pre-commit/mirrors-flake8
     rev: v4.0.1
     hooks:
       - id: flake8
+        args: [--max-line-length=100]  # Довжина рядка для Flake8
+
+  # Mypy для перевірки типізації
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.5.1
     hooks:
       - id: mypy
+        args: [--ignore-missing-imports]  # Ігнорування відсутніх імпортів
+
+  # Isort для сортування імпортів
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.10.1
+    hooks:
+      - id: isort
+        args: [--profile=black]  # Налаштування профілю для Black
