--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,21 @@
 repos:
-  # Black для форматування коду
   - repo: https://github.com/psf/black
-    rev: 23.9.1  # Версія Black, можна обрати останню стабільну
+    rev: 24.10.0
     hooks:
       - id: black
-        args: [--line-length=100]  # Налаштування довжини рядка
+        args: [--line-length=120]
+        files: ^(app/.*\.py|main\.py)$
 
-  # Flake8 для перевірки стилю коду
-  - repo: https://github.com/pre-commit/mirrors-flake8
-    rev: v4.0.1
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.0.0
     hooks:
       - id: flake8
-        args: [--max-line-length=100]  # Довжина рядка для Flake8
+        args: [--max-line-length=120]
+        files: ^(app/.*\.py|main\.py)$
 
-  # Mypy для перевірки типізації
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.5.1
+    rev: v1.13.0
     hooks:
       - id: mypy
-        args: [--ignore-missing-imports]  # Ігнорування відсутніх імпортів
-
-  # Isort для сортування імпортів
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
-    hooks:
-      - id: isort
-        args: [--profile=black]  # Налаштування профілю для Black
+        args: [--ignore-missing-imports]
+        files: ^(app/.*\.py|main\.py)$
